--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
-<head><table>Math Test</table></head>
+
+<head>
+    <table>Math Test</table>
+</head>
 <p>Name:</p>
 <form>
     <input type="text">
@@ -11,58 +14,58 @@
 <p>Age</p>
 <form>
     <select>
-      <option selected>0-16</option>
-      <option>17-25</option>
-      <option>26-45</option>
-      <option>46-65</option>
-      <option>66-99</option>
+        <option selected>0-16</option>
+        <option>17-25</option>
+        <option>26-45</option>
+        <option>46-65</option>
+        <option>66-99</option>
     </select>
-  </form>
-  <p></p>
-  <form>
+</form>
+<p></p>
+<form>
     <fieldset>
-      <legend>Multiple Choice</legend>
-      <form>
-        <p>math question one</p>
-        <input type="radio" name="tvhours" value="none">
-         1<br/>
-        <input type="radio" name="tvhours" value="low">
-        2<br/>
-        <input type="radio" name="tvhours" value="med" checked>
-        3<br/>
-        <input type="radio" name="tvhours" value="high">
-        4
+        <legend>Multiple Choice</legend>
         <form>
-            <p>math question two</p>
-            <input type="radio" name="tvhours" value="none">
-            1<br/>
-            <input type="radio" name="tvhours" value="low">
-            2<br/>
-            <input type="radio" name="tvhours" value="med" checked>
-            3<br/>
-            <input type="radio" name="tvhours" value="high">
+            <p>math question one</p>
+            <input type="radio" name="math" value="none">
+            1<br />
+            <input type="radio" name="math" value="low">
+            2<br />
+            <input type="radio" name="math" value="med">
+            3<br />
+            <input type="radio" name="math" value="high">
             4
             <form>
-                <p>math question three</p>
-                <input type="radio" name="tvhours" value="none">
-                1<br/>
-                <input type="radio" name="tvhours" value="low">
-                2<br/>
-                <input type="radio" name="tvhours" value="med" checked>
-                3<br/>
-                <input type="radio" name="tvhours" value="high">
+                <p>math question two</p>
+                <input type="radio" name="math" value="none">
+                1<br />
+                <input type="radio" name="math" value="low">
+                2<br />
+                <input type="radio" name="math" value="med">
+                3<br />
+                <input type="radio" name="math" value="high">
                 4
+                <form>
+                    <p>math question three</p>
+                    <input type="radio" name="math" value="none">
+                    1<br />
+                    <input type="radio" name="math" value="low">
+                    2<br />
+                    <input type="radio" name="math" value="med">
+                    3<br />
+                    <input type="radio" name="math" value="high">
+                    4
+                </form>
             </form>
         </form>
-    </form>
     </fieldset>
     <fieldset>
-      <legend>Short Answer</legend>
-      <p>blah blah blah math</p>
-      <form>
-        Please answer in 1-3 sentences<br/>
-        <textarea></textarea>
-    </form>
+        <legend>Short Answer</legend>
+        <p>blah blah blah math</p>
+        <form>
+            Please answer in 1-3 sentences<br />
+            <textarea></textarea>
+        </form>
     </fieldset>
     <button type="submit">Submit</button>
-  </form>
+</form>
