--- a/index.html
+++ b/index.html
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
 
 <head>
-    <table>Math Test</table>
+    <title>Math Test</title>
 </head>
-<p>Name:</p>
+<h1>Math Test Unit 1</h1>
+<!-- Start Test Form-->
 <form>
+    <p>Name:</p>
     <input type="text">
-</form>
-<p>Email:</p>
-<form>
+    <p>Email:</p>
     <input type="text">
-</form>
-<p>Age</p>
-<form>
+    <p>Age</p>
     <select>
         <option selected>0-16</option>
         <option>17-25</option>
@@ -20,52 +18,48 @@
         <option>46-65</option>
         <option>66-99</option>
     </select>
-</form>
-<p></p>
-<form>
+    <p></p>
     <fieldset>
         <legend>Multiple Choice</legend>
-        <form>
-            <p>math question one</p>
-            <input type="radio" name="math" value="none">
-            1<br />
-            <input type="radio" name="math" value="low">
-            2<br />
-            <input type="radio" name="math" value="med">
-            3<br />
-            <input type="radio" name="math" value="high">
-            4
-            <form>
-                <p>math question two</p>
-                <input type="radio" name="math" value="none">
-                1<br />
-                <input type="radio" name="math" value="low">
-                2<br />
-                <input type="radio" name="math" value="med">
-                3<br />
-                <input type="radio" name="math" value="high">
-                4
-                <form>
-                    <p>math question three</p>
-                    <input type="radio" name="math" value="none">
-                    1<br />
-                    <input type="radio" name="math" value="low">
-                    2<br />
-                    <input type="radio" name="math" value="med">
-                    3<br />
-                    <input type="radio" name="math" value="high">
-                    4
-                </form>
-            </form>
-        </form>
+        <p>24&#215;3=?</p>
+        <input type="radio" name="q1" value="none">
+        88<br />
+        <input type="radio" name="q1" value="low">
+        64<br />
+        <input type="radio" name="q1" value="med">
+        75<br />
+        <input type="radio" name="q1" value="high">
+        72<br />
+        <p>10000000&#247;100=?</p>
+        <input type="radio" name="q2" value="none">
+        100000<br />
+        <input type="radio" name="q2" value="low">
+        10<br />
+        <input type="radio" name="q2" value="med">
+        10000<br />
+        <input type="radio" name="q2" value="high">
+        1000000000000000<br />
+        <p>239487&#8211;34567=?</p>
+        <input type="radio" name="q3" value="none">
+        456769<br />
+        <input type="radio" name="q3" value="low">
+        193437<br />
+        <input type="radio" name="q3" value="med">
+        204920<br />
+        <input type="radio" name="q3" value="high">
+        220904<br />
     </fieldset>
     <fieldset>
         <legend>Short Answer</legend>
-        <p>blah blah blah math</p>
-        <form>
-            Please answer in 1-3 sentences<br />
-            <textarea></textarea>
-        </form>
+        <p>A man drove to the local fruit market to purchased 200 watermelons for his store. He loaded them in his truck
+            and he could not go anywhere, so he weighed them all to find out that they were 1000lbs. His truck can only
+            hold 800lbs. How many watermelons can the man take home in one trip?
+        </p>
+        Please answer in 1-3 sentences<br />
+        <textarea></textarea>
     </fieldset>
     <button type="submit">Submit</button>
 </form>
+<!-- End Test Form -->
+
+</html>
